# python-neutronclient

./: setup.cfg
neutronclient/: shell.py
neutronclient/neutron/v2_0/: router.py  securitygroup.py
neutronclient/neutron/v2_0/cisco/: __init__.py  hostingdevice.py  hostingdevicescheduler.py  hostingdevicetemplate.py  routerscheduler.py  routertype.py
neutronclient/tests/unit/cisco/: test_cli20_cisco.py  test_cli20_hostingdevice.py  test_cli20_hostingdevicescheduler.py  test_cli20_hostingdevicetemplate.py  test_cli20_routerscheduler.py  test_cli20_routertype.py
neutronclient/v2_0/: client.py
