[metadata]
name = python-neutronclient
summary = CLI and Client Library for OpenStack Networking
description-file =
    README.rst
author = OpenStack Networking Project
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    neutronclient

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    neutron = neutronclient.shell:main
neutronclient.extension =
    hosting_devices = neutronclient.neutron.v2_0.cisco.hostingdevice
    hosting_device_scheduler = neutronclient.neutron.v2_0.cisco.hostingdevicescheduler
    hosting_device_templates = neutronclient.neutron.v2_0.cisco.hostingdevicetemplate
    router_scheduler = neutronclient.neutron.v2_0.cisco.routerscheduler
    router_types = neutronclient.neutron.v2_0.cisco.routertype

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1
